addidng db management